# ChangeLog for www-client/cupage
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cupage-0.5.2 (03 Jan 2011)

  03 Jan 2011; James Rowe <jnrowe@gmail.com> +cupage-0.5.2.ebuild:
  Version bump [245].

  20 Dec 2010; James Rowe <jnrowe@gmail.com> cupage-0.5.1.ebuild,
  +files/cupage-0.5.1-Fixed-usage-without-termstyle.patch:
  Fixed build for systems without termstyle. No revision bump, as it only
  effects new installs.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> cupage-0.5.1.ebuild:
  Changed homepage to sphinx documentation location.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> cupage-0.5.1.ebuild,
  metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

  19 Jul 2010; James Rowe <jnrowe@gmail.com> -cupage-0.5.0.ebuild,
  cupage-0.5.1.ebuild:
  Keyworded x86.

  17 Jul 2010; James Rowe <jnrowe@gmail.com> cupage-0.5.1.ebuild:
  Keyworded amd64.

  08 Jul 2010; James Rowe <jnrowe@gmail.com> -cupage-0.4.0.ebuild,
  cupage-0.5.0.ebuild:
  Keyworded x86.

  08 Jul 2010; James Rowe <jnrowe@gmail.com> cupage-0.5.0.ebuild:
  Keyworded amd64.

*cupage-0.5.1 (16 Jun 2010)

  16 Jun 2010; James Rowe <jnrowe@gmail.com> +cupage-0.5.1.ebuild:
  Version bump [753].

*cupage-0.5.0 (08 Jun 2010)

  08 Jun 2010; James Rowe <jnrowe@gmail.com> +cupage-0.5.0.ebuild:
  Version bump.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> cupage-0.4.0.ebuild:
  Use version globbing for RESTRICT_PYTHON_ABIS.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> cupage-0.4.0.ebuild:
  Added PYTHON_DEPEND setting.

  26 Feb 2010; James Rowe <jnrowe@gmail.com> -cupage-0.3.1.ebuild,
  cupage-0.4.0.ebuild:
  Keyworded amd64.

  26 Feb 2010; James Rowe <jnrowe@gmail.com> cupage-0.4.0.ebuild:
  Keyworded x86.

  14 Feb 2010; James Rowe <jnrowe@gmail.com> cupage-0.3.1.ebuild,
  cupage-0.4.0.ebuild:
  Incompatible with python 2.5 and earlier, and incompatible with 3.x due to
  print usage. The upstream [me] has no desire to support those versions