@@ -1,5 +1,5 @@
 dev-python/docutils doc? ( dev-python/sphinx ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
-dev-python/configobj dev-python/httplib2 dev-python/lxml >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
+dev-python/configobj dev-python/httplib2 dev-python/lxml !minimal? ( dev-python/termcolor ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
 0
 https://github.com/JNRowe/cupage/tarball/0.5.3 -> cupage-0.5.3.tar.gz
 
@@ -8,7 +8,7 @@ GPL-3
 A tool to check for updates on web pages
 ~amd64 ~x86
 distutils multilib python toolchain-funcs
-doc
+doc minimal
 
 
 
