@@ -5,13 +5,13 @@ AUX cupage-0.5.1-Fixed-usage-without-termstyle.patch 865 RMD160 f94f2481bbdacd08
 DIST cupage-0.5.1.tar.gz 41297 RMD160 48bfa3798630100ca1e01557ef1b7cf689e9c4ff SHA1 eab5d92565f7e7b30fcc17ab97445934a1a966c9 SHA256 8b69dc7b125cd4927da7e13a9f8311683630bf8d78b2be91b7bcd758225a26f1
 DIST cupage-0.5.3.tar.gz 38413 RMD160 619a8cfb5a86c9e3b2141dbd8f670c0645a561b0 SHA1 7e13caa1685fc6ac4808d55e61d9fea14f2d096c SHA256 f61ea7ef04f0fc82fba3fdae01323a763ec9830de4502907bc9a35213e240105
 EBUILD cupage-0.5.1.ebuild 1147 RMD160 64a6cf921b931d7abbcebffd1a5592332775ae84 SHA1 593930e0a38798a1483a3023205483ea0a5b8f4c SHA256 c1e0845ed0fd83a5da3ec7f04ef8e057d4500c66dcb2c881645e62b3157c5913
-EBUILD cupage-0.5.3.ebuild 1060 RMD160 902d6a373aae9c4fb045385854b61d891674b2e4 SHA1 493541c6b5d6a31805aa043e98446680b2308b7f SHA256 3963f67f473de53cec8b4a4fa612d711c620d772897c7327901f779bdbdfb170
-MISC ChangeLog 3400 RMD160 8ff6d13d4f75da089138b50aaa12e5ab10259fa6 SHA1 0166af17cdf9cfebf28cae2c6d035084942be5ba SHA256 b08b04bd4111fca6738099fe875e699f8c9c087919d80a92a81997ca6b774d13
+EBUILD cupage-0.5.3.ebuild 1104 RMD160 deb5729491f1a21c256f0c658c12e8f2f437f628 SHA1 ae70a50a2dcc9c72f03815d84328d7c644284a28 SHA256 e3de1b28185ad92fe438c6012b9b8752bba2304131ecbc671a7d1de3b72f2c4f
+MISC ChangeLog 3510 RMD160 14f36ded86473427ddce2b975b88f81b35f81df5 SHA1 f3de81b068457435b1c68065504c0d56ae8c748d SHA256 8cb2f92dbdf09e5c4daf567b3e2d4efa5d8ab7ecb4a51d7b94ed1fe599cb9db5
 MISC metadata.xml 821 RMD160 12557063487e0e0d224e7ced43403d64d17bd8d2 SHA1 7abf40668022398ab5b2f17ae93d05720fc3aaa9 SHA256 67364238f64bd2a1a9e86722e06fe7842340bda0ec2592fb97367f6194d03b58
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk0iLncACgkQzJrj3cAXR0mhEwCgreZMUax1H6ngvjB3dIYqkic4
-qVMAoLM5GW0WLZbkxA/HxhHl08PfktT8
-=rDsU
+iEYEARECAAYFAk0iMQoACgkQzJrj3cAXR0m78ACgidPY+KcSjd3YZs+PZOLGQ9HW
+MIAAn2B0tnVu2yPiR4k3rdA8AGDra/96
+=3jy3
 -----END PGP SIGNATURE-----
