@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Jan 2011; James Rowe <jnrowe@gmail.com> cupage-0.5.3.ebuild:
+  Depend on termcolor, unless USE=minimal.
+
 *cupage-0.5.2 (03 Jan 2011)
 
   03 Jan 2011; James Rowe <jnrowe@gmail.com> +cupage-0.5.2.ebuild:
